Adding new example to POST in chunks

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                       <ul>
                           <li><a target="_blank" href="/csv/list.php"><code>GET</code> /diamonds (index)</a></li>
                           <li><a target="_blank" href="/csv/create.php"><code>POST</code> /diamonds (create)</a></li>
+                          <li><a target="_blank" href="/csv/create-chunks.php"><code>POST</code> /diamonds (create in chunks)</a></li>
                           <li><a target="_blank" href="/csv/update.php"><code>PATCH</code> /diamonds/{id} (update single)</a></li>
                           <li><a target="_blank" href="/csv/delete.php"><code>DELETE</code> /diamonds/{id} (delete single</a>)</li>
                       </ul>
